[package]
name = "AsyncDB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version = "1.23.0", features = ["tcp-server", "tcp-listener"] }


[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }

